<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvAddPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/add_payment"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRupeeSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/rupee_symbol"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddPayment" />

    <EditText
        android:id="@+id/edtAmount"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="13dp"
        android:layout_marginTop="13dp"
        android:autofillHints="null"
        android:background="@drawable/bg_border"
        android:hint="@string/amount"
        android:inputType="number"
        android:maxLength="10"
        android:paddingHorizontal="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvRupeeSymbol"
        app:layout_constraintTop_toBottomOf="@id/tvAddPayment"
        app:layout_constraintWidth_default="spread" />

    <View
        android:id="@+id/spnBg"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/spn_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtAmount"
        app:layout_constraintWidth_default="spread" />

    <Spinner
        android:id="@+id/spnPaymentType"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtAmount"
        app:layout_constraintWidth_default="spread" />

    <EditText
        android:id="@+id/edtProvider"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="13dp"
        android:autofillHints="null"
        android:background="@drawable/bg_border"
        android:hint="@string/provider"
        android:inputType="text"
        android:paddingHorizontal="13dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvRupeeSymbol"
        app:layout_constraintTop_toBottomOf="@id/spnPaymentType"
        app:layout_constraintWidth_default="spread"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/edtReference"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="13dp"
        android:autofillHints="null"
        android:background="@drawable/bg_border"
        android:hint="@string/transaction_reference"
        android:inputType="text"
        android:paddingHorizontal="13dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvRupeeSymbol"
        app:layout_constraintTop_toBottomOf="@id/edtProvider"
        app:layout_constraintWidth_default="spread"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="13dp"
        android:text="@string/ok"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtReference" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="13dp"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        app:layout_constraintTop_toBottomOf="@id/edtReference" />

</androidx.constraintlayout.widget.ConstraintLayout>